--- a/edit-windows-path.htm
+++ b/edit-windows-path.htm
@@ -10,9 +10,18 @@ By using this software you accept that the author cannot be held responsible for
   <title>Edit Windows system path</title>
   <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.2/themes/smoothness/jquery-ui.css" />
   <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+  <style type="text/css">
+    body { font-family: sans-serif; }
+    label { font-weight:bold; }
+  </style>
 </head>
 <body>
 
+<h2>Windows system PATH editor</h2>
+
+<p>Simple "editor" for the Windows PATH environment variable. Converts semi-colons to newlines and vice-versa.</p>
+
+<label for="path_joined">The PATH environment variable (with semi-colons):</label><br/>
 <textarea id="path_joined" rows="1" cols="100"></textarea>
 <br/>
 <!--
@@ -20,7 +29,8 @@ By using this software you accept that the author cannot be held responsible for
 <button id="join_button">Join</button>
 <br/>
 -->
-<textarea id="path_split" rows="50" cols="100"></textarea>
+<label for="path_split">The PATH split into multiple lines:</label><br/>
+<textarea id="path_split" rows="30" cols="100"></textarea>
 
 <script type="text/javascript">
   function splitPath(){
@@ -40,5 +50,17 @@ By using this software you accept that the author cannot be held responsible for
     $('#path_split').bind('change keydown keyup', joinPath);
   });
 </script>
+
+<h3>How to use:</h3>
+<ol>
+<li>Follow the usual steps to get the value of the PATH environment variable (for example: press Windows+Pause/Break -> Advanced -> Environment variables)</li>
+<li>Copy the value of the PATH environment variable and paste it in this webpage, in the top textarea</li>
+<li>In the bottom textarea you will automatically have your PATH split into multiple lines, and you can edit it as you like</li>
+<li>While editing, any changes that you make to either of the two textareas will be automatically reflected in the other textarea</li>
+<li>When you are finished editing, copy again the value from the top textarea and paste it in the Windows->Advanced->Environment variables->PATH</li>
+</ol>
+
+<p>If you enjoy this tool and you want to support the author, you can donate (fractions of) Bitcoins here: <strong>18dsHgFbv9wYbSj4bHoks2LSjiEk7fvDnf</strong></p>
+
 </body>
 </html>
