--- a/edit-linux-path.htm
+++ b/edit-linux-path.htm
@@ -22,7 +22,7 @@ By using this software you accept that the author cannot be held responsible for
 <p>Simple "editor" for the Linux PATH environment variable. Converts colons to newlines and vice-versa.</p>
 
 <label for="path_joined">The PATH environment variable (with directories separated by colons):</label><br/>
-<textarea id="path_joined" rows="1" cols="100"></textarea>
+<textarea id="path_joined" rows="1" cols="100" wrap="off"></textarea>
 <br/>
 <!--
 <button id="split_button">Split</button>
@@ -30,7 +30,7 @@ By using this software you accept that the author cannot be held responsible for
 <br/>
 -->
 <label for="path_split">The PATH split into multiple lines (one directory per line):</label><br/>
-<textarea id="path_split" rows="35" cols="100"></textarea>
+<textarea id="path_split" rows="35" cols="100" wrap="off"></textarea>
 
 <script type="text/javascript">
   function splitPath(){
