--- a/quick-edit-windows-path.htm
+++ b/quick-edit-windows-path.htm
@@ -13,14 +13,14 @@ By using this software you accept that the author cannot be held responsible for
 </head>
 <body>
 
-<textarea id="path_joined" rows="1" cols="100"></textarea>
+<textarea id="path_joined" rows="1" cols="100" wrap="off"></textarea>
 <br/>
 <!--
 <button id="split_button">Split</button>
 <button id="join_button">Join</button>
 <br/>
 -->
-<textarea id="path_split" rows="50" cols="100"></textarea>
+<textarea id="path_split" rows="50" cols="100" wrap="off"></textarea>
 
 <script type="text/javascript">
   function splitPath(){
